--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
             <li><a href="http://melrosesnowymint.tk\dino">Dino</a></li>
             <li><a href="http://melrosesnowymint.tk\store">Store</a></li>
             <li><a href="http://melrosesnowymint.tk\bestofweek">Best of the week!</a></li>
+            <li><a href="https://discord.com/api/oauth2/authorize?client_id=812952519298121728&permissions=433526799942&scope=bot%20applications.commands">Invite Discord Bot</a></li>
         </ul>
     </nav>
     <div class="names" id="names">
